# toca

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: keyboard_display.rs  keyboard_record.rs  keyboard_recorder.rs  mouse_display.rs  mouse_record.rs  mouse_recorder.rs
src/: display.rs  dq_record.rs  lib.rs  main.rs  mapper.rs  record.rs  toca.rs  utils.rs
tests/: play_mock_keys.rs
